website version 3.0 complete redis , thread and pagination